tests/ui/associated-type-bounds/issue-71443-1.rs
struct Incorrect;

fn hello<F: for<'a> Iterator<Item: 'a>>() {
    Incorrect //~ERROR: mismatched types
}

fn main() {}
